--- a/app/build.gradle
+++ b/app/build.gradle
@@ -2,7 +2,7 @@ plugins {
     id 'com.android.application'
     id 'org.jetbrains.kotlin.android'
     id 'kotlin-kapt'
-    //id 'com.google.dagger.hilt.android'
+    id 'com.google.dagger.hilt.android'
 }
 
 android {
@@ -64,7 +64,16 @@ dependencies {
     implementation 'androidx.activity:activity-ktx:1.7.1'
     implementation 'androidx.fragment:fragment-ktx:1.5.7'
 
+    // Hilt
+    implementation("com.google.dagger:hilt-android:2.44")
+    kapt "com.google.dagger:hilt-android-compiler:2.44"
+
     // Coroutines
     // implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.6.4'
     // implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-core:1.5.2'
+}
+
+// Allow references to generated code
+kapt {
+    correctErrorTypes = true
 }
