--- a/app/build.gradle
+++ b/app/build.gradle
@@ -35,21 +35,23 @@ android {
     buildFeatures {
         dataBinding true
     }
+    testOptions {
+        unitTests.all {
+            useJUnitPlatform()
+        }
+    }
 }
 
 dependencies {
     implementation project(":core")
 
-    implementation 'androidx.core:core-ktx:1.7.0'
+    implementation 'androidx.core:core-ktx:1.10.0'
     implementation 'androidx.appcompat:appcompat:1.6.1'
     implementation 'com.google.android.material:material:1.8.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
     implementation 'androidx.core:core-ktx:1.10.0'
     implementation 'androidx.navigation:navigation-fragment-ktx:2.5.3'
     implementation 'androidx.navigation:navigation-ui-ktx:2.5.3'
-    testImplementation 'junit:junit:4.13.2'
-    androidTestImplementation 'androidx.test.ext:junit:1.1.5'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
 
     // Retrofit
     implementation 'com.squareup.retrofit2:retrofit:2.9.0'
@@ -59,6 +61,8 @@ dependencies {
     implementation 'com.squareup.moshi:moshi:1.14.0'
     implementation 'com.squareup.moshi:moshi-kotlin:1.14.0'
     implementation "com.fasterxml.jackson.module:jackson-module-kotlin:2.12.7"
+    implementation 'androidx.test:core-ktx:1.5.0'
+    implementation 'androidx.test.ext:junit-ktx:1.1.5'
     kapt "com.squareup.moshi:moshi-kotlin-codegen:1.14.0"
 
     implementation 'androidx.activity:activity-ktx:1.7.1'
@@ -68,9 +72,27 @@ dependencies {
     implementation("com.google.dagger:hilt-android:2.44")
     kapt "com.google.dagger:hilt-android-compiler:2.44"
 
-    // Coroutines
-    // implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.6.4'
-    // implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-core:1.5.2'
+    // Testing
+    //testImplementation 'org.junit.jupiter:junit-jupiter-api:5.9.3'
+    //testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.9.3'
+    testImplementation 'junit:junit:4.13.2'
+    testImplementation 'org.mockito:mockito-core:5.1.1'
+    testImplementation 'org.mockito:mockito-inline:5.0.0'
+    testImplementation "org.mockito.kotlin:mockito-kotlin:4.1.0"
+    testImplementation 'androidx.arch.core:core-testing:2.2.0'
+
+    debugImplementation "org.mockito:mockito-android:3.2.4"
+
+    testImplementation 'com.google.truth:truth:1.1.3'
+    testImplementation 'com.nhaarman.mockitokotlin2:mockito-kotlin:3.2.0'
+
+    //testImplementation 'io.mockk:mockk:1.13.5'
+    //testImplementation 'org.mockito.kotlin:mockito-kotlin:4.1.0'
+    //testImplementation 'org.mockito:mockito-junit-jupiter:3.1'
+    //testImplementation 'org.robolectric:robolectric:4.4.1'
+    // androidTestImplementation 'androidx.test.ext:junit:1.1.5'
+    // androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
+
 }
 
 // Allow references to generated code
