--- a/build.gradle
+++ b/build.gradle
@@ -1,4 +1,11 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
+buildscript {
+    dependencies {
+        //classpath("de.mannodermaus.gradle.plugins:android-junit5:1.9.3.0")
+        classpath 'com.android.tools.build:gradle:7.2'
+    }
+}
+
 plugins {
     id 'com.android.application' version '7.4.2' apply false
     id 'com.android.library' version '7.4.2' apply false
@@ -6,3 +13,4 @@ plugins {
     id 'org.jetbrains.kotlin.jvm' version '1.8.0' apply false
     id("com.google.dagger.hilt.android") version "2.44" apply false
 }
+
