Adding Testing Suite

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -3,6 +3,7 @@ plugins {
     id 'org.jetbrains.kotlin.android'
     id 'kotlin-kapt'
     id 'com.google.dagger.hilt.android'
+    id 'de.mannodermaus.android-junit5' version '1.9.3.0'
 }
 
 android {
@@ -35,6 +36,11 @@ android {
     buildFeatures {
         dataBinding true
     }
+    //testOptions {
+    //    unitTests.all {
+    //        useJUnitPlatform()
+    //    }
+    //}
 }
 
 dependencies {
@@ -47,9 +53,6 @@ dependencies {
     implementation 'androidx.core:core-ktx:1.10.0'
     implementation 'androidx.navigation:navigation-fragment-ktx:2.5.3'
     implementation 'androidx.navigation:navigation-ui-ktx:2.5.3'
-    testImplementation 'junit:junit:4.13.2'
-    androidTestImplementation 'androidx.test.ext:junit:1.1.5'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
 
     // Retrofit
     implementation 'com.squareup.retrofit2:retrofit:2.9.0'
@@ -68,9 +71,26 @@ dependencies {
     implementation("com.google.dagger:hilt-android:2.44")
     kapt "com.google.dagger:hilt-android-compiler:2.44"
 
-    // Coroutines
-    // implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.6.4'
-    // implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-core:1.5.2'
+    // Testing
+    testImplementation 'junit:junit:4.13.2'
+    testImplementation 'org.junit.jupiter:junit-jupiter'
+    testImplementation 'org.junit.jupiter:junit-jupiter'
+    debugImplementation 'androidx.test.espresso:espresso-core:3.5.1'
+
+    // (Required) Writing and executing Unit Tests on the JUnit Platform
+    testImplementation("org.junit.jupiter:junit-jupiter-api:5.9.3")
+    testRuntimeOnly("org.junit.jupiter:junit-jupiter-engine:5.9.3")
+    testImplementation "io.mockk:mockk:1.13.5"
+    testImplementation 'org.jetbrains.kotlinx:kotlinx-coroutines-test:1.7.1'
+
+    // UI
+    androidTestImplementation 'androidx.test:runner:1.5.2'
+    androidTestImplementation 'androidx.test:rules:1.5.0'
+    androidTestImplementation 'androidx.test.ext:junit:1.1.5'
+    androidTestImplementation 'androidx.test.espresso:espresso-contrib:3.5.1'
+    androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
+    debugImplementation("androidx.fragment:fragment-testing:1.5.7")
+    androidTestImplementation "androidx.arch.core:core-testing:2.2.0"
 }
 
 // Allow references to generated code
